@@ -3,6 +3,8 @@
                               Kiji Schema Release Notes
 
 Version 1.1.0
+  * SCHEMA-187. Allows decoding records with the writer schema when no
+      specific record is available (ie. when there is no reader schema).
   * SCHEMA-324. bin/kiji supports loading Hadoop distro-specific dependencies
       by inferring from "bin/hadoop version" or $KIJI_HADOOP_DISTRO_VER.
 
